--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Listing users</h1>
-<table>
+<center><h1>Users</h1>
+<table class="hovertable">
+
   <tr>
     <th>Name</th>
     <th>Email</th>
