--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,5 +19,5 @@ body {
    font-family: Helvetica, Geneva, Arial, sans-serif;
    font-size: small;
    font-color: #000;
-   background-color: #fff;
+   background-color: #A9BCF5;
 }
