--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Route Planner Pro</title>
+    <% if !signed_in? %>
+			<% else %>
+		<div align = "right">Signed in as <%= @current_user.name %></div>
+	<%end %>
+    <link rel="icon" type="image/ico" href="assets/images/favicon.ico">
+
   
   <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-<div id="header">
-<div style="color:#58ACFA">
-<h1 align = "center">Route Planner Pro</h1>
-<h4 align = "center">powered by Ruby on Rails</h4>
-</div>
-	<div id="sidebar">  <br >
-<ul>
-	<% if !signed_in? %>
-		<li><%= link_to "Sign In", signin_path %></li>		
-	<% else %>
-		<li>Signed in as <%= @current_user.name %></li>
-		<li><%= link_to "Sign Out", signout_path %></li>
+  <div style="color:#58ACFA">
 
-	<%end %>
+<div id="header"; align= "center">
+<h1>Route Planner Pro</h1>
+<h4>helping you get to your destination safely</h4>
+<div>
+	<ul>
+		 <% if !signed_in? %>
+	 	 <li><%= link_to "Sign In", signin_path %></li>
+	 	 <% else %>
+	 	 	 	 <li><%= link_to "Sign Out", signout_path %></li>
+	 	 	 	 	<%end %>
+
 	 	 <li><%= link_to "Home", pages_home_path %></li>
  		 <li><%= link_to "Contact", pages_contact_path %></li>
 		 <li><%= link_to "Help", pages_help_path %></li>
+		 <li><%= link_to "Profile", users_path %></li>
+ 		 <li><%= link_to "Bridge Locations", markers_path %></li>
+
+		 
 
 
 
-	</ul></div>
+	</ul>
+</div>
+
 </div>
 </head>
-<body id="library"> 
-<div id="container">
-
-
 <div id="content">
 <%= yield -%>
+</div>
+
+<div align= "center">
+<% if !signed_in? %>
+ <li> <h3>New user? <%= link_to "Sign up now!", users_path %> </h3> </li>
+	 	 <% else %>
+<%end %>
 </div>
 </html>
