--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -18,40 +18,81 @@ var mapProp = {
   
 var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
- var image = {
-    url: 'bridge.jpg',
-    // This marker is 20 pixels wide by 32 pixels tall.
-    size: new google.maps.Size(32, 22),
-    // The origin for this image is 0,0.
-    origin: new google.maps.Point(0,0),
-    // The anchor for this image is the base of the flagpole at 0,32.
-    anchor: new google.maps.Point(0, 0)
-  }
+ 
+ 
   
-   for(i=0;i<bridgeLatArray.length;i++) {
-  var bridge = new google.maps.LatLng(53.338551, -6.266247);
-   var marker = new google.maps.Marker({
+  for(i=0;i<bridgeLatArray.length;i++) {
+  var bridge = new google.maps.LatLng(bridgeLatArray[i], bridgeLngArray[i]);
+   var bMarker = new google.maps.Marker({
     position:bridge,
-    //title: bridgeDetailArray + "!",
-    icon: image,
+    
   });
-  marker.setMap(map);
+  bMarker.setMap(map);
   
   }
+   
   var infowindow = new google.maps.InfoWindow({
-  content: "Height: ",
-  
+  content: "Height: " + bridgeHeight,
   });
-  infowindow.open(map,marker);
+  infowindow.open(map,bMarker);
   
- //}
+  
+   
+
   //zoom in on marker when clicked
   
- google.maps.event.addListener(marker,'click',function() {
+ google.maps.event.addListener(bMarker,'click',function() {
   map.setZoom(9);
-  map.setCenter(marker.getPosition());
+  map.setCenter(bMarker.getPosition());
   });
+
   } 
+
+
+  
+if (window.XMLHttpRequest)
+  {// code for IE7+, Firefox, Chrome, Opera, Safari
+  xmlhttp=new XMLHttpRequest();
+  }
+else
+  {// code for IE6, IE5
+  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+  }
+xmlhttp.open("GET","assets/bridges.xml",false);
+xmlhttp.send();
+xmlDoc=xmlhttp.responseXML;
+var myBridges = xmlDoc.getElementsByTagName("name").length;
+var bridgeLatArray = new Array();
+var bridgeLngArray = new Array();
+
+  for(i=0;i<myBridges;i++) {
+  
+  document.getElementById("name").innerHTML += "<br >" + xmlDoc.getElementsByTagName("name")[i].childNodes[0].nodeValue;
+  document.getElementById("height").innerHTML += "<br >" + xmlDoc.getElementsByTagName("height")[i].childNodes[0].nodeValue;
+  document.getElementById("lat").innerHTML += "<br >" + xmlDoc.getElementsByTagName("lat")[i].childNodes[0].nodeValue;
+  document.getElementById("lng").innerHTML += "<br >" + xmlDoc.getElementsByTagName("lng")[i].childNodes[0].nodeValue;
+  var bridgeName = xmlDoc.getElementsByTagName("name")[i].childNodes[0].nodeValue;
+  var bridgeHeight = xmlDoc.getElementsByTagName("height")[i].childNodes[0].nodeValue;
+  var bridgeLat = xmlDoc.getElementsByTagName("lat")[i].childNodes[0].nodeValue;
+  var bridgeLatitude = parseFloat(bridgeLat);
+  var bridgeLng = xmlDoc.getElementsByTagName("lng")[i].childNodes[0].nodeValue;
+    var bridgeLongitude = parseFloat(bridgeLng);
+  var bridge1 = new google.maps.LatLng(bridgeLatitude, bridgeLongitude);
+  //var marker = new google.maps.Marker({
+  //  position:bridge1,
+  //  map: map,
+  //  title: name
+  //});
+  document.write(bridge1 + "<br >");
+  bridgeLatArray[i] = bridgeLatitude;
+  bridgeLngArray[i] = bridgeLongitude;
+  //document.write(bridgeLatArray[i] +"<br > " + bridgeLngArray[i] + "<br > <br >");
+  
+  i++;
+  }
+    
+
+  
 google.maps.event.addDomListener(window, 'load', initialize); 
   
 </script>
