--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,12 +1,11 @@
-<h1>Listing vehicles</h1>
+<center><h1>Listing vehicles</h1>
 
-<table>
+<table class="hovertable">
   <tr>
     <th>Reg</th>
     <th>Decription</th>
     <th>Height</th>
-    <th>Carimage</th>
-    <th>User</th>
+    <th>Owner</th>
     <th></th>
     <th></th>
     <th></th>
@@ -16,16 +15,15 @@
   <tr>
     <td><%= vehicle.reg %></td>
     <td><%= vehicle.decription %></td>
-    <td><%= vehicle.height %></td>
-    <td><%= vehicle.carimage %></td>
+    <td><%= vehicle.height  %> Meters</td>
     <td><%= vehicle.user.name %></td>
-    <td><%= link_to 'Show', vehicle %></td>
+
+   <td><%= link_to 'Show', vehicle %></td>
     <td><%= link_to 'Edit', edit_vehicle_path(vehicle) %></td>
     <td><%= link_to 'Destroy', vehicle, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
-
 <br />
 
 <%= link_to 'New Vehicle', new_vehicle_path %>
