--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :height %><br />
     <%= f.text_field :height %>
   </div>
+  <div class="field">
+    <%= f.label :"Car Image" %><br />
+    <%= f.text_field :carimage %>
+  </div>
      
    
 
