--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 
 <div align= "center">
 <% if !signed_in? %>
- <li> <h3>New user? <%= link_to "Sign up now!", users_path %> </h3> </li>
+ <li> <h3>New user? <%= link_to "Sign up now!", new_user_path %> </h3> </li>
 	 	 <% else %>
 <%end %>
 </div>
