--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,98 +3,6 @@
 <p>Email: help@routeplannerpro.com </p>
 
 
-
-<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY0kkJiTPVd2U7aTOAwhc9ySH6oHxOIYM&sensor=false"> </script>
-<br><br><br><br>
-<script>
-var x=new google.maps.LatLng(53.47497,-7.966805); 
-  
-function initialize(){
-var mapProp = {
-  center:x,
-  zoom:7,
-  mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
- 
- 
-  
-  for(i=0;i<bridgeLatArray.length;i++) {
-  var bridge = new google.maps.LatLng(bridgeLatArray[i], bridgeLngArray[i]);
-   var bMarker = new google.maps.Marker({
-    position:bridge,
-    
-  });
-  bMarker.setMap(map);
-  
-  }
-   
-  var infowindow = new google.maps.InfoWindow({
-  content: "Height: " + bridgeHeight,
-  });
-  infowindow.open(map,bMarker);
-  
-  
-   
-
-  //zoom in on marker when clicked
-  
- google.maps.event.addListener(bMarker,'click',function() {
-  map.setZoom(9);
-  map.setCenter(bMarker.getPosition());
-  });
-
-  } 
-
-
-  
-if (window.XMLHttpRequest)
-  {// code for IE7+, Firefox, Chrome, Opera, Safari
-  xmlhttp=new XMLHttpRequest();
-  }
-else
-  {// code for IE6, IE5
-  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
-  }
-xmlhttp.open("GET","assets/bridges.xml",false);
-xmlhttp.send();
-xmlDoc=xmlhttp.responseXML;
-var myBridges = xmlDoc.getElementsByTagName("name").length;
-var bridgeLatArray = new Array();
-var bridgeLngArray = new Array();
-
-  for(i=0;i<myBridges;i++) {
-  
-  document.getElementById("name").innerHTML += "<br >" + xmlDoc.getElementsByTagName("name")[i].childNodes[0].nodeValue;
-  document.getElementById("height").innerHTML += "<br >" + xmlDoc.getElementsByTagName("height")[i].childNodes[0].nodeValue;
-  document.getElementById("lat").innerHTML += "<br >" + xmlDoc.getElementsByTagName("lat")[i].childNodes[0].nodeValue;
-  document.getElementById("lng").innerHTML += "<br >" + xmlDoc.getElementsByTagName("lng")[i].childNodes[0].nodeValue;
-  var bridgeName = xmlDoc.getElementsByTagName("name")[i].childNodes[0].nodeValue;
-  var bridgeHeight = xmlDoc.getElementsByTagName("height")[i].childNodes[0].nodeValue;
-  var bridgeLat = xmlDoc.getElementsByTagName("lat")[i].childNodes[0].nodeValue;
-  var bridgeLatitude = parseFloat(bridgeLat);
-  var bridgeLng = xmlDoc.getElementsByTagName("lng")[i].childNodes[0].nodeValue;
-    var bridgeLongitude = parseFloat(bridgeLng);
-  var bridge1 = new google.maps.LatLng(bridgeLatitude, bridgeLongitude);
-  //var marker = new google.maps.Marker({
-  //  position:bridge1,
-  //  map: map,
-  //  title: name
-  //});
-  document.write(bridge1 + "<br >");
-  bridgeLatArray[i] = bridgeLatitude;
-  bridgeLngArray[i] = bridgeLongitude;
-  //document.write(bridgeLatArray[i] +"<br > " + bridgeLngArray[i] + "<br > <br >");
-  
-  i++;
-  }
-    
-
-  
-google.maps.event.addDomListener(window, 'load', initialize); 
-  
-</script>
-
-<div id="googleMap" padding:50 style="width:510px;height:620px;"></div>
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
