--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,10 @@
    <%= f.label :password_confirmation %><br />
     <%= f.text_field :password_confirmation %><br />
   </div>
+   <div class="field">
+      profile picture uploader:
+       <%= f.file_field :profileImage %>
+  </div>
   <div class="actions">
     <%= f.submit %>
 	</button>
