--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,10 @@
     <title>Route Planner Pro</title>
     <% if !signed_in? %>
 			<% else %>
-		<div align = "right">Signed in as <%= @current_user.name %></div>
-	<%end %>
+		<div align = "right">Signed in as <%= @current_user.name %> <br>
+				<img src="<%= @current_user.profileImage %>"width="85" height="85" align = "right"</td>
+
+	<%end %></div>
     <link rel="icon" type="image/ico" href="assets/images/favicon.ico">
 
   
@@ -28,7 +30,7 @@
 	 	 <li><%= link_to "Home", pages_home_path %></li>
  		 <li><%= link_to "Contact", pages_contact_path %></li>
 		 <li><%= link_to "Help", pages_help_path %></li>
-		 <li><%= link_to "Profile", users_path %></li>
+		 <li><%= link_to "Profile", user_path(@current_user) %></li>
  		 <li><%= link_to "Bridge Locations", markers_path %></li>
 
 		 
