--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -4,9 +4,10 @@
   <tr>
     <th>Reg</th>
     <th>Decription</th>
-    <th>Height</th>
-    <th>Owner</th>
     <th></th>
+    <th>Height</th>
+    <th>Trailer Height</th>
+    <th>Owner</th>
     <th></th>
     <th></th>
     <th></th>
@@ -16,9 +17,10 @@
   <tr>
     <td><%= vehicle.reg %></td>
     <td><%= vehicle.decription %></td>
+    <td><img src="<%= vehicle.carImageUploader %>"width="75" height="45"></td>
     <td><%= vehicle.height  %> Meters</td>
+    <td><%= vehicle.trailer  %> Meters</td>
     <td><%= vehicle.user.name %></td>
-    <td><img src="<%= vehicle.carImageUploader %>"width="25" height="20"></td>
    <td><%= link_to 'View', vehicle %></td>
     <td><%= link_to 'Update', edit_vehicle_path(vehicle) %></td>
     <td><%= link_to 'Delete', vehicle, confirm: 'Are you sure?', method: :delete %></td>
