--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -14,6 +14,10 @@
   <b>Height:</b>
   <%= @vehicle.height %> Meters
 </p>
+<b>Trailer Height:</b>
+  <%= @vehicle.trailer %> Meters
+  <div id="no trailer selected"> 
+</p>
 
 <p>
   <b> </b>  <br />
@@ -27,4 +31,9 @@
 
 
 <%= link_to 'Edit', edit_vehicle_path(@vehicle) %> |
-<%= link_to 'Back', vehicles_path %>
+<% if !signed_in? %>
+    <%= link_to 'Home', pages_home_path %>
+     <% else %>
+             <%= link_to "Back to Profile", user_path(@current_user) %>
+
+          <%end %>
