--- a/app/views/markers/show.html.erb
+++ b/app/views/markers/show.html.erb
@@ -5,7 +5,9 @@
   <b>Address:</b>
   <%= @marker.address %>
 </p>
-
+<b>County:</b>
+  <%= @marker.county %>
+</p>
 <p>
   <b>Height:</b>
   <%= @marker.height %> meters
