--- a/app/views/markers/_form.html.erb
+++ b/app/views/markers/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :address %>
   </div>
   <div class="field">
+    <%= f.label :county %><br />
+    <%= f.text_field :county %>
+  </div>
+  <div class="field">
     <%= f.label :height %><br />
     <%= f.text_field :height %>
   </div>
