--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,65 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About</h1>
+<p>Add Gallery here and instructions</p>
+
+ <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+
+<center>
+
+
+<script>
+var rendererOptions = {
+  draggable: true
+};
+var directionsDisplay = new google.maps.DirectionsRenderer(rendererOptions);;
+var directionsService = new google.maps.DirectionsService();
+var map;
+
+var middleMap = new google.maps.LatLng(53.424878,-7.940766);
+
+function initialize() {
+
+  var mapOptions = {
+    zoom: 7,
+    center: middleMap
+  };
+  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+  var image = 'images/bridge1.png';
+  var bridge1 = new google.maps.LatLng(52.357895, -7.0075917);
+	var aMarker = new google.maps.Marker({
+		position:bridge1,
+		//icon: image,
+	});
+	aMarker.setMap(map);
+	
+	var bridge2 = new google.maps.LatLng(53.712105, -7.743023);
+	var bMarker = new google.maps.Marker({
+		position:bridge2,
+	});
+	bMarker.setMap(map);
+
+	var infowindow = new google.maps.InfoWindow({
+		content: "Test",
+	});
+	infowindow.open(map,aMarker);
+  
+	var infoWindow = new google.maps.InfoWindow();
+			var html="hello";
+			google.maps.event.addListener(bMarker, 'click', function() {
+				content: "Hello",
+				infoWindow.open(map, bMarker);
+  });	
+	
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+ 
+  <body>
+
+    </div>
+    <div id="map-canvas" style="float:center"> <br ></div>
+
+ </center>
+
+</body>
