--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,7 @@ var map;
 
 var middleMap = new google.maps.LatLng(53.424878,-7.940766);
 
+
 function initialize() {
 
   var mapOptions = {
@@ -20,6 +21,23 @@ function initialize() {
     center: middleMap
   };
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  <% @markers.each do |m| %>                  
+    var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
+    var marker = new google.maps.Marker({position:bridge});
+    marker.setMap(map);
+ 
+  <% end %>
+   <% @markers.each do |m| %>   
+   //var windowcontent = <%= m.address %>;
+   var infoWindow = new google.maps.InfoWindow();
+   var html='<strong>' + "dd" +'</strong.>'+ " Height:" + "dd" +"m";
+   google.maps.event.addListener(marker, 'click', function() {
+        infoWindow.setContent(html);
+        infoWindow.open(map, marker);
+      });
+
+      <% end %>
+
   directionsDisplay.setMap(map);
   directionsDisplay.setPanel(document.getElementById('directionsPanel'));
 
@@ -28,6 +46,7 @@ function initialize() {
   });
 
 }
+
 
 function calcRoute() {
 
@@ -54,6 +73,12 @@ function calcRoute() {
   });
 }
 
+var bridge1 = new google.maps.LatLng(53.712105	-7.743023);
+	var bMarker = new google.maps.Marker({
+		position:bridge1,
+	});
+	bMarker.setMap(map);
+	
 function computeTotalDistance(result) {
   var total = 0;
   var myroute = result.routes[0];
@@ -64,7 +89,8 @@ function computeTotalDistance(result) {
   document.getElementById('total').innerHTML = "Total Distance: " + total + ' km';
 }
   
-
+	
+	
   google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
@@ -75,12 +101,10 @@ function computeTotalDistance(result) {
 
   <H2>  Please enter your starting point and destination </H2>
   <form id= "routeform">
-      <label for="start">Start point:</label><input type="text" id="start" value="Mullingar"> <br>
+      <label for="start">Start point:</label><input type="text" id="start" value="53.714493, -7.741307"> <br>
       <label for="stop">Stop point:</label><input type="text" id="stop" value="Birr, Offaly"> <br>
-      <label for="dest">Destination:</label><input type="text" id="dest" value="Tuam">  <br>
+      <label for="dest">Destination:</label><input type="text" id="dest" value="Mallow, Cork">  <br>
       <label for="">Vehicle:</label><input type="text" id="vehicle">  <br>
-      <script><%= collection_select(:user_id, 0, User.all, :id, :name) %> </script>
-
       <select>
         <option value="saab">Saab</option>
         <option value="mercedes">Mercedes</option>
@@ -93,7 +117,7 @@ function computeTotalDistance(result) {
   </form>
     <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
     </div>
-    <div id="map-canvas" style="float:left;width:100%; height:600px"> <br ></div>
+    <div id="map-canvas" style="float:center"> <br ></div>
     <div id="directionsPanel" style="float:left;width:55%;height 90%"> </div>
   <div id="textFields" style="float:right;width:20%; height:90%"> </div>
 
