--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,9 @@
-<h1>About</h1>
-<p>Add Gallery here and instructions</p>
+<center>
+<h1>Plan you journey</h1>
 
  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-<center>
+
 
 
 <script>
@@ -16,6 +16,7 @@ var map;
 
 var middleMap = new google.maps.LatLng(53.424878,-7.940766);
 
+
 function initialize() {
 
   var mapOptions = {
@@ -23,43 +24,108 @@ function initialize() {
     center: middleMap
   };
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  <% @markers.each do |m| %>                  
+    var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
+    var marker = new google.maps.Marker({position:bridge});
+    marker.setMap(map);
+ 
+  <% end %>
+   <% @markers.each do |m| %>   
+   //var windowcontent = <%= m.address %>;
+   var infoWindow = new google.maps.InfoWindow();
+   var html='<strong>' + "dd" +'</strong.>'+ " Height:" + "dd" +"m";
+   google.maps.event.addListener(marker, 'click', function() {
+        infoWindow.setContent(html);
+        infoWindow.open(map, marker);
+      });
 
-  var image = 'images/bridge1.png';
-  var bridge1 = new google.maps.LatLng(52.357895, -7.0075917);
-	var aMarker = new google.maps.Marker({
-		position:bridge1,
-		//icon: image,
-	});
-	aMarker.setMap(map);
-	
-	var bridge2 = new google.maps.LatLng(53.712105, -7.743023);
+      <% end %>
+
+  directionsDisplay.setMap(map);
+  directionsDisplay.setPanel(document.getElementById('directionsPanel'));
+
+  google.maps.event.addListener(directionsDisplay, 'directions_changed', function() {
+    computeTotalDistance(directionsDisplay.getDirections());
+  });
+
+}
+
+
+function calcRoute() {
+
+  var startPoint = document.getElementById("start").value
+  var endPoint = document.getElementById("dest").value
+  var stopPoint = document.getElementById("stop").value
+  
+  
+  var request = {
+    origin: startPoint,
+    destination: endPoint,
+  //if(stopPoint !=null) {
+    waypoints:[{location: stopPoint}],
+  //}
+  //else {
+  //  alert("Please add stop off point!");
+  //  }
+  travelMode: google.maps.TravelMode.DRIVING
+  };
+  directionsService.route(request, function(response, status) {
+    if (status == google.maps.DirectionsStatus.OK) {
+      directionsDisplay.setDirections(response);
+    }
+  });
+}
+
+var bridge1 = new google.maps.LatLng(53.712105	-7.743023);
 	var bMarker = new google.maps.Marker({
-		position:bridge2,
+		position:bridge1,
 	});
 	bMarker.setMap(map);
-
-	var infowindow = new google.maps.InfoWindow({
-		content: "Test",
-	});
-	infowindow.open(map,aMarker);
-  
-	var infoWindow = new google.maps.InfoWindow();
-			var html="hello";
-			google.maps.event.addListener(bMarker, 'click', function() {
-				content: "Hello",
-				infoWindow.open(map, bMarker);
-  });	
 	
+function computeTotalDistance(result) {
+  var total = 0;
+  var myroute = result.routes[0];
+  for (var i = 0; i < myroute.legs.length; i++) {
+    total += myroute.legs[i].distance.value;
   }
+  total = total / 1000.0;
+  document.getElementById('total').innerHTML = "Total Distance: " + total + ' km';
+}
+  
+	
+	
   google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
  
   <body>
 
+  <div style="color:#58ACFA">
+
+  <H2>  Please enter your starting point and destination </H2>
+  <form id= "routeform">
+      <label for="start">Start point:</label><input type="text" id="start" value="53.714493, -7.741307"> <br>
+      <label for="stop">Stop point:</label><input type="text" id="stop" value="Birr, Offaly"> <br>
+      <label for="dest">Destination:</label><input type="text" id="dest" value="Mallow, Cork">  <br>
+      <label for="">Vehicle:</label><input type="text" id="vehicle">  <br>
+  </form>
+  </div>
+    
+          <p id="p2"><b><span id="total"></span></b></p>
+  </form>
+    <button type="submit" onclick= "calcRoute()"> Submit </button> <br> <br>
     </div>
     <div id="map-canvas" style="float:center"> <br ></div>
+    <div id="directionsPanel" style="float:left;width:55%;height 90%"> </div>
+  <div id="textFields" style="float:right;width:20%; height:90%"> </div>
 
  </center>
 
+
+ <div style="float:right;width:45%; height:50%">
+  <a class="twitter-timeline" href="https://twitter.com/aaroadwatch" data-widget-id="433665295937327104" style="float:left;">Tweets by @aaroadwatch</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<a class="twitter-timeline" href="https://twitter.com/GardaTraffic" data-widget-id="433673439446962176">Tweets by @GardaTraffic</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
+</div>
 </body>
