--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -142,14 +142,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 </script>
  
- <body>
+ <body id="content2">
 
  <div id="map-canvas" style="float:center"> <br ></div>
 
  </center>
 
 
- <div style="float:left;width:45%; height:50%; margin:2%">
+ <div  style="float:left;width:45%; height:50%; margin:2%">
   <a class="twitter-timeline" href="https://twitter.com/aaroadwatch" data-widget-id="433665295937327104" style="float:left;">Tweets by @aaroadwatch</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
